<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>persistent-caches</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>
          <source>19</source>
          <target>19</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <transformers>
                <transformer
                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.github.SuduIDE.persistentidecaches.VsCodeClient</mainClass>
                </transformer>
              </transformers>
            </configuration>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.4</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
    <dependency>
      <artifactId>org.eclipse.jgit</artifactId>
      <groupId>org.eclipse.jgit</groupId>
      <version>6.5.0.202303070854-r</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-engine</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.jupiter.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.jupiter.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-params</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.jupiter.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-platform-suite</artifactId>
      <groupId>org.junit.platform</groupId>
      <scope>test</scope>
      <version>${junit.platform.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
    <dependency>
      <artifactId>mockito-core</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>5.2.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.lmdbjava/lmdbjava -->
    <dependency>
      <artifactId>lmdbjava</artifactId>
      <groupId>org.lmdbjava</groupId>
      <version>0.8.3</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>2.0.6</version>
    </dependency>
    <dependency>
      <artifactId>slf4j-reload4j</artifactId>
      <groupId>org.slf4j</groupId>
      <version>2.0.6</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>3.12.0</version>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.14.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
    <dependency>
      <artifactId>javaparser-core</artifactId>
      <groupId>com.github.javaparser</groupId>
      <version>3.25.1</version>
    </dependency>



  </dependencies>
  <groupId>com.github</groupId>
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <junit.jupiter.version>5.9.2</junit.jupiter.version>
    <junit.platform.version>1.9.2</junit.platform.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <version>1.0-SNAPSHOT</version>


</project>